Refactor benchmarks and tests
Build now configured so that bench:test runs minimal version of
 benchmarks
Tests are refactored and made quicker